fixed image out of box

--- a/public/css/post-overview.scss
+++ b/public/css/post-overview.scss
@@ -68,13 +68,14 @@ main {
             position: relative;
             background: $color-black-medium;
             width: 100%;
+
+            &:hover {
+                text-decoration: none;
+            }
         
             .description {
-                max-width: 100%;
                 height: 150px;
-                margin: 0;
-                padding: .5em;
-                float: left;
+                margin: .5em;
                 display: flex;
                 flex-direction: column;
         
@@ -130,7 +131,7 @@ main {
                 }
             }
 
-            .picture {
+            img {
                 display: none;
             }
         }
@@ -162,36 +163,30 @@ main {
             border-color: $color-black-dark;
             min-height: unset;
             height: 10em;
+            display: flex;
+            justify-content: space-between;
 
             &:hover {
                 border-color: $color-blue-dark;
 
-                .picture {
+                img {
                     opacity: .7;
                 }
             }
 
             .description {
                 max-width: 65%;
-                padding: .5em;
+                width: 1rem;
+                flex: 1 0 1rem;
             }
 
-            .picture {
-                display: flex;
-
-                max-width: 45%;
-                height: inherit;
-                margin: 0;
-                float: right;
+            img {
+                display: unset;
+                height: 100%;
+                border-radius: 0 .5em .5em 0;
+                max-width: 100%;
                 opacity: 1;
                 transition: opacity 0.3s;
-
-                img {
-                    margin: auto 0;
-                    width: auto;
-                    height: 100%;
-                    border-radius: 0 .5em .5em 0;
-                }
             }
         }
     }
