--- a/public/css/project-overview.scss
+++ b/public/css/project-overview.scss
@@ -22,12 +22,13 @@ $color-green: #4EC9B0;        /* Post-name part of h1 in posts */
     background: $color-black-medium;
     width: 100%;
 
+    &:hover {
+        text-decoration: none;
+    }
+
     .description {
-        max-width: calc(100% - 1em); // 1em is 2x padding
-        min-height: 150px;
-        margin: 0;
-        padding: .5em;
-        float: left;
+        height: 150px;
+        margin: .5em;
         display: flex;
         flex-direction: column;
 
@@ -91,7 +92,8 @@ $color-green: #4EC9B0;        /* Post-name part of h1 in posts */
             }
         }
     }
-    .picture {
+
+    img {
         display: none;
     }
 }
@@ -112,36 +114,30 @@ $color-green: #4EC9B0;        /* Post-name part of h1 in posts */
             border-color: $color-black-dark;
             min-height: unset;
             height: 10em;
+            display: flex;
+            justify-content: space-between;
 
             &:hover {
                 border-color: $color-blue-dark;
 
-                .picture {
+                img {
                     opacity: .7;
                 }
             }
 
             .description {
-                max-width: 65%;
-                padding: .5em;
+                margin-right: 0;
+                width: 1rem;
+                flex: 1 0 1rem;
             }
 
-            .picture {
-                display: flex;
-
-                max-width: 45%;
-                height: inherit;
-                margin: 0;
-                float: right;
+            img {
+                display: unset;
+                height: 100%;
+                border-radius: 0 .5em .5em 0;
+                max-width: 100%;
                 opacity: 1;
                 transition: opacity 0.3s;
-
-                img {
-                    margin: auto 0;
-                    width: auto;
-                    height: 100%;
-                    border-radius: 0 .5em .5em 0;
-                }
             }
         }
     }
